clarklab/templates/mongo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress
  namespace: clarklab
spec:
  rules:
    - host: mongo.fairscape.pods.uvarc.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mongo-backend-service
                port:
                  number: 27017
  tls:
      - hosts:
          - mongo.fairscape.pods.uvarc.io
        secretName: mongo-fairscape-nginx-tls-ingress-secret
